
It's tomorrow...and it's fixed.
----------------------------------------------------------------------
Sat Jan 24 13:54:02 2004                        Michael Jennings (mej)

Added map interface (unimplemented) and a paired object class.
----------------------------------------------------------------------
Fri Jan 30 17:55:47 2004                        Michael Jennings (mej)

Working on adding assertions/requires for NULL object checks.

Also making sure list elements can be NULL so insert_at() can resize
a list.
----------------------------------------------------------------------
Mon Feb  2 17:22:42 2004                        Michael Jennings (mej)

More cleanups.  And yes, I know "make test" doesn't work.
----------------------------------------------------------------------
Tue Feb  3 18:18:32 2004                        Michael Jennings (mej)

Cleanups are done.  Almost done with the NULL handling for lists too.
----------------------------------------------------------------------
Wed Feb  4 10:53:04 2004                        Michael Jennings (mej)

Should be all fixed now.
----------------------------------------------------------------------
Wed Feb  4 17:24:56 2004                        Michael Jennings (mej)

Some test improvements.
----------------------------------------------------------------------
Thu Feb  5 16:31:43 2004                        Michael Jennings (mej)

Plugged a few leaks and cleaned up one uninitialized parameter
problem.
----------------------------------------------------------------------
Mon Feb 23 16:52:13 2004                        Michael Jennings (mej)

Removed bogus assertion.

Added map_if.h to install.
----------------------------------------------------------------------
Mon Mar  1 14:29:13 2004                        Michael Jennings (mej)

AVL tree removal work-in-progress.
----------------------------------------------------------------------