@@ -620,3 +620,7 @@ Mon Mar  1 14:29:13 2004                        Michael Jennings (mej)
 
 AVL tree removal work-in-progress.
 ----------------------------------------------------------------------
+Mon Mar  1 14:52:12 2004                        Michael Jennings (mej)
+
+Dumb-duh-dumb-dumb-DUMB!
+----------------------------------------------------------------------
